<resources>
    <string name="app_name">Filmappen</string>

    <string name="app_title">FILMAPPEN</string>
    <string name="app_home_subtitle">Spara dina favoritfilmer och ge dem ett betyg.</string>
    <string name="empty_text">Här var det tomt, börja med att söka efter filmer att favoritmarkera</string>
    <string name="app_search_subtitle">Sök bland filmer</string>
    <string name="btn_link_seaerch">Sök efter filmer och serier</string>
    <string name="database_name">filmappen-databas</string>

    <string name="search_alt_all">Allt</string>
    <string name="search_alt_movie">Film</string>
    <string name="search_alt_series">Serie</string>
    <string name="search_alt_episode">Avsnitt</string>
    <string name="search_alt_movie_key">movie</string>
    <string name="search_alt_series_key">series</string>
    <string name="search_alt_episode_key">episode</string>
    <string name="search_start_new">Börja med att göra en sökning</string>

    <!-- OMDB API -->
    <string name="omdb_base_url">http://www.omdbapi.com</string>
    <string name="omdb_poster_base_url">http://img.omdbapi.com</string>

    <!-- Söksida -->
    <string name="lbl_sok">Sök</string>
    <string name="hint_sokord">Sökord</string>
</resources>